# mnemo

./: .env.release.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-29-markdown-highlight-tool.md  2026-06-30-cut-split-tool.md
docs/superpowers/specs/: 2026-06-29-markdown-highlight-tool-design.md  2026-06-30-cut-split-tool-design.md
plugins/: README.md
plugins/chrome/: README.md  background.js  content.js  manifest.json  offscreen.js
plugins/chrome/src/: content.js  generate-icons.html  manifest.json
scripts/: release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  main.rs  search.rs
src/components/ChatDetail/: ChatDetail.tsx  CutOverlay.tsx  MarkdownToolbar.tsx
src/components/ChatList/: ChatList.tsx
src/components/FolderTree/: FolderTree.tsx
src/components/Settings/: Settings.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/TagTree/: TagTree.tsx
src/hooks/: useAnalysisSettings.ts  useDatabase.ts  useTheme.ts
src/lib/: attachments.ts  bookmarklets.ts  cut-dom.test.ts  cut-dom.ts  cut-plugin.test.ts  cut.test.ts  cut.ts  db.ts  drag-state.ts  highlight-dom.ts  highlight-plugin.test.ts  highlight.test.ts  highlight.ts  html-parser.ts  jsx-preview.ts  metadata.ts  parser.ts  pipeline.derisk.test.ts
src/types/: index.ts
