[package]
name = "mnemo"
version = "0.1.0"
description = "Personal archive for AI chat exports"
authors = ["illegal.studio"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mnemo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["webview-data-url"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tempfile = "3"
tantivy = "0.22"
